globally prevent img overflowing its container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,7 @@ a:focus-visible {
   outline-color: currentColor;
   outline-width: var(--s-3);
 }
+
+img {
+  max-width: 100%;
+}
